[package]
name = "test_process_executor"
version = "0.1.0"
authors = ["Sean Klein <seanmarionklein@gmail.com>"]
description = "Test utility for process launching"
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.36"
